// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuditPlanRecord should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              auditPlan.planTaskRecord.title
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn"
                type="button"
              >
                <span
                  aria-label="sync"
                  class="anticon anticon-sync anticon-spin"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="sync"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-list ant-list-split ant-list-something-after-last-item"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-list-empty-text"
            >
              <div
                class="ant-empty ant-empty-normal"
              >
                <div
                  class="ant-empty-image"
                >
                  <svg
                    class="ant-empty-img-simple"
                    height="41"
                    viewBox="0 0 64 41"
                    width="64"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      transform="translate(0 1)"
                    >
                      <ellipse
                        class="ant-empty-img-simple-ellipse"
                        cx="32"
                        cy="33"
                        rx="32"
                        ry="7"
                      />
                      <g
                        class="ant-empty-img-simple-g"
                        fill-rule="nonzero"
                      >
                        <path
                          d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                        />
                        <path
                          class="ant-empty-img-simple-path"
                          d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                        />
                      </g>
                    </g>
                  </svg>
                </div>
                <div
                  class="ant-empty-description"
                >
                  No Data
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-list-pagination"
        >
          <ul
            class="ant-pagination"
            unselectable="unselectable"
          >
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-0 ant-pagination-disabled ant-pagination-item-disabled"
              tabindex="0"
              title="0"
            >
              <a
                rel="nofollow"
              >
                0
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-haspopup="listbox"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="10 / page"
                  >
                    10 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuditPlanRecord should match snapshot 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              auditPlan.planTaskRecord.title
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn"
                type="button"
              >
                <span
                  aria-label="sync"
                  class="anticon anticon-sync"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="sync"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-list ant-list-split ant-list-something-after-last-item"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <ul
              class="ant-list-items"
            >
              <li
                class="ant-list-item"
              >
                <div
                  class="ant-list-item-meta"
                >
                  <div
                    class="ant-list-item-meta-avatar"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center flex-all-center"
                      style="width: 50px;"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <span
                          aria-label="check-circle"
                          class="anticon anticon-check-circle text-green"
                          role="img"
                          style="font-size: 25px;"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="check-circle"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                            <path
                              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-list-item-meta-content"
                  >
                    <h4
                      class="ant-list-item-meta-title"
                    >
                      <a
                        href="/auditPlan/detail/planName/report/177"
                      >
                        <span
                          class="text-blue"
                        >
                          auditPlan.record.generateTime2022-03-10 15:00:00
                        </span>
                      </a>
                    </h4>
                    <div
                      class="ant-list-item-meta-description"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 8px;"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.source
                             
                            100
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.passRage
                            100
                            %
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item"
              >
                <div
                  class="ant-list-item-meta"
                >
                  <div
                    class="ant-list-item-meta-avatar"
                  >
                    <div
                      class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 1px;"
                      >
                        <div>
                          <span
                            aria-label="audit"
                            class="anticon anticon-audit"
                            role="img"
                            style="font-size: 25px;"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="audit"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          normal
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-list-item-meta-content"
                  >
                    <h4
                      class="ant-list-item-meta-title"
                    >
                      <a
                        href="/auditPlan/detail/planName/report/176"
                      >
                        <span
                          class="text-blue"
                        >
                          auditPlan.record.generateTime2022-03-10 14:00:00
                        </span>
                      </a>
                    </h4>
                    <div
                      class="ant-list-item-meta-description"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 8px;"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.source
                             
                            --
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.passRage
                            100
                            %
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item"
              >
                <div
                  class="ant-list-item-meta"
                >
                  <div
                    class="ant-list-item-meta-avatar"
                  >
                    <div
                      class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 1px;"
                      >
                        <div>
                          <span
                            aria-label="audit"
                            class="anticon anticon-audit"
                            role="img"
                            style="font-size: 25px;"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="audit"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          normal
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-list-item-meta-content"
                  >
                    <h4
                      class="ant-list-item-meta-title"
                    >
                      <a
                        href="/auditPlan/detail/planName/report/175"
                      >
                        <span
                          class="text-blue"
                        >
                          auditPlan.record.generateTime2022-03-10 13:46:00
                        </span>
                      </a>
                    </h4>
                    <div
                      class="ant-list-item-meta-description"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 8px;"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.source
                             
                            100
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.passRage
                            --
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item"
              >
                <div
                  class="ant-list-item-meta"
                >
                  <div
                    class="ant-list-item-meta-avatar"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center flex-all-center"
                      style="width: 50px;"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <span
                          aria-label="check-circle"
                          class="anticon anticon-check-circle text-green"
                          role="img"
                          style="font-size: 25px;"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="check-circle"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                            <path
                              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-list-item-meta-content"
                  >
                    <h4
                      class="ant-list-item-meta-title"
                    >
                      <a
                        href="/auditPlan/detail/planName/report/174"
                      >
                        <span
                          class="text-blue"
                        >
                          auditPlan.record.generateTime2022-03-10 13:45:00
                        </span>
                      </a>
                    </h4>
                    <div
                      class="ant-list-item-meta-description"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 8px;"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.source
                             
                            --
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.passRage
                            --
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item"
              >
                <div
                  class="ant-list-item-meta"
                >
                  <div
                    class="ant-list-item-meta-avatar"
                  >
                    <div
                      class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 1px;"
                      >
                        <div>
                          <span
                            aria-label="audit"
                            class="anticon anticon-audit"
                            role="img"
                            style="font-size: 25px;"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="audit"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          normal
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-list-item-meta-content"
                  >
                    <h4
                      class="ant-list-item-meta-title"
                    >
                      <a
                        href="/auditPlan/detail/planName/report/173"
                      >
                        <span
                          class="text-blue"
                        >
                          auditPlan.record.generateTime2022-03-10 13:44:00
                        </span>
                      </a>
                    </h4>
                    <div
                      class="ant-list-item-meta-description"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 8px;"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.source
                             
                            100
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.passRage
                            100
                            %
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item"
              >
                <div
                  class="ant-list-item-meta"
                >
                  <div
                    class="ant-list-item-meta-avatar"
                  >
                    <div
                      class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 1px;"
                      >
                        <div>
                          <span
                            aria-label="audit"
                            class="anticon anticon-audit"
                            role="img"
                            style="font-size: 25px;"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="audit"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          normal
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-list-item-meta-content"
                  >
                    <h4
                      class="ant-list-item-meta-title"
                    >
                      <a
                        href="/auditPlan/detail/planName/report/172"
                      >
                        <span
                          class="text-blue"
                        >
                          auditPlan.record.generateTime2022-03-10 13:43:00
                        </span>
                      </a>
                    </h4>
                    <div
                      class="ant-list-item-meta-description"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 8px;"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.source
                             
                            100
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.passRage
                            100
                            %
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item"
              >
                <div
                  class="ant-list-item-meta"
                >
                  <div
                    class="ant-list-item-meta-avatar"
                  >
                    <div
                      class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 1px;"
                      >
                        <div>
                          <span
                            aria-label="audit"
                            class="anticon anticon-audit"
                            role="img"
                            style="font-size: 25px;"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="audit"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          normal
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-list-item-meta-content"
                  >
                    <h4
                      class="ant-list-item-meta-title"
                    >
                      <a
                        href="/auditPlan/detail/planName/report/171"
                      >
                        <span
                          class="text-blue"
                        >
                          auditPlan.record.generateTime2022-03-10 13:42:00
                        </span>
                      </a>
                    </h4>
                    <div
                      class="ant-list-item-meta-description"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 8px;"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.source
                             
                            100
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.passRage
                            100
                            %
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item"
              >
                <div
                  class="ant-list-item-meta"
                >
                  <div
                    class="ant-list-item-meta-avatar"
                  >
                    <div
                      class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 1px;"
                      >
                        <div>
                          <span
                            aria-label="audit"
                            class="anticon anticon-audit"
                            role="img"
                            style="font-size: 25px;"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="audit"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          normal
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-list-item-meta-content"
                  >
                    <h4
                      class="ant-list-item-meta-title"
                    >
                      <a
                        href="/auditPlan/detail/planName/report/170"
                      >
                        <span
                          class="text-blue"
                        >
                          auditPlan.record.generateTime2022-03-10 13:41:00
                        </span>
                      </a>
                    </h4>
                    <div
                      class="ant-list-item-meta-description"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 8px;"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.source
                             
                            100
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.passRage
                            100
                            %
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item"
              >
                <div
                  class="ant-list-item-meta"
                >
                  <div
                    class="ant-list-item-meta-avatar"
                  >
                    <div
                      class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 1px;"
                      >
                        <div>
                          <span
                            aria-label="audit"
                            class="anticon anticon-audit"
                            role="img"
                            style="font-size: 25px;"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="audit"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          normal
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-list-item-meta-content"
                  >
                    <h4
                      class="ant-list-item-meta-title"
                    >
                      <a
                        href="/auditPlan/detail/planName/report/169"
                      >
                        <span
                          class="text-blue"
                        >
                          auditPlan.record.generateTime2022-03-10 13:40:00
                        </span>
                      </a>
                    </h4>
                    <div
                      class="ant-list-item-meta-description"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 8px;"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.source
                             
                            100
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.passRage
                            100
                            %
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item"
              >
                <div
                  class="ant-list-item-meta"
                >
                  <div
                    class="ant-list-item-meta-avatar"
                  >
                    <div
                      class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 1px;"
                      >
                        <div>
                          <span
                            aria-label="audit"
                            class="anticon anticon-audit"
                            role="img"
                            style="font-size: 25px;"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="audit"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-typography ant-typography-secondary"
                        >
                          normal
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-list-item-meta-content"
                  >
                    <h4
                      class="ant-list-item-meta-title"
                    >
                      <a
                        href="/auditPlan/detail/planName/report/168"
                      >
                        <span
                          class="text-blue"
                        >
                          auditPlan.record.generateTime2022-03-10 13:39:00
                        </span>
                      </a>
                    </h4>
                    <div
                      class="ant-list-item-meta-description"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 8px;"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.source
                             
                            100
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-typography ant-typography-secondary"
                          >
                            audit.passRage
                            100
                            %
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ant-list-pagination"
        >
          <ul
            class="ant-pagination"
            unselectable="unselectable"
          >
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-0 ant-pagination-disabled ant-pagination-item-disabled"
              tabindex="0"
              title="0"
            >
              <a
                rel="nofollow"
              >
                0
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-haspopup="listbox"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="10 / page"
                  >
                    10 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
